Bug fix min height would break the postion here.

--- a/css/header_sidebar.css
+++ b/css/header_sidebar.css
@@ -252,7 +252,7 @@ footer a:hover {
     padding-left: 55px;
 }
 
-@media screen and (min-width: 1921px) and (min-height: 1081px) {
+@media screen and (min-width: 1921px) {
     .user-profile-menu {
         position: absolute;
         z-index: 999;
